--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
+
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-       <link rel="stylesheet" href="{{ asset('css/Style.css') }}" type="text/css">
-        {% endblock %}
+    {% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/Style.css') }}" type="text/css">
+    {% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}
+    {% block javascripts %}
+    {#{{ encore_entry_script_tags('app') }}#}
+    {% endblock %}
+</head>
 
-        
-        {% endblock %}
-    </body>
+<body>
+    {% block body %}
+    <form id="jq_search">
+        <input type="search" placeholder="Recherche" />
+    </form>
+
+   
+   
+    
+
+   
+
+
+
+
+
+
+    {% endblock %}
+</body>
+
 </html>
