--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,19 +19,8 @@
     {% block body %}
     <form id="jq_search">
         <input type="search" placeholder="Recherche" />
+        <button type="submit">Search</button>
     </form>
-
-   
-   
-    
-
-   
-
-
-
-
-
-
     {% endblock %}
 </body>
 
