--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,12 @@
         <input type="search" placeholder="Recherche" />
         <button type="submit">Search</button>
     </form>
+       {% if app.user %}
+        
+              <a href="{{ path('app_logout') }}">se deconnecter</a>
+            {% else %}
+              <a href="{{ path('app_login') }}">se connecter</a>
+            {% endif %} 
     {% endblock %}
 </body>
 
