--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -11,12 +11,12 @@
        
         <div class="card">
 
-            <img src="https://via.placeholder.com/150" alt="Avatar" style="width:100%">
+            <img src="{{ vich_uploader_asset(movie,'imageFile')  }}" alt="Avatar" style="width:100%">
             <div class="container">
                 <h4><b>{{ movie.name }}</b></h4>
                 <h4><b>{{ movie.gender }}</b></h4>
                 {{ movie.id }} 
-                {{ movie.img }}
+               
                 <a href="{{ path('movie_show', {'id': movie.id}) }}">show</a>
                 <a href="{{ path('movie_edit', {'id': movie.id}) }}">edit</a>
             </div>
