--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -38,21 +38,54 @@ body{
 
 /* search bar */
 #jq_search
-			{
-				text-align:center;
-				margin:48px 0;
-			}
-			
-				#jq_search input[type="search"]
-				{
-					padding:12px;
-					width:305px;
-					height:48px;
-				}
-				
-				#jq_search input[type="submit"]
-				{
-					width:68px;
-					height:48px;
-					background:#333 url(img/search_icon_sprite.png) no-repeat ;
-        }
+{
+	text-align:center;
+	margin:48px 0;
+}
+
+#jq_search input[type="search"]
+{
+	padding:12px;
+	width:305px;
+	height:48px;
+}
+
+#jq_search input[type="submit"]
+{
+	width:68px;
+	height:48px;
+	background:#333 url(img/search_icon_sprite.png) no-repeat ;
+}
+
+/*Admin navigation*/
+
+/* Add a black background color to the top navigation */
+.topnav {
+	background-color: #333;
+	overflow: hidden;
+	margin-top: -8px;
+	margin-left: -8px;
+	
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+	background-color: #ddd;
+	color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+	background-color: #f15b5bb4;
+	color: white;
+  }
