--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,20 +9,26 @@
     {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/Style.css') }}" type="text/css">
     {% endblock %}
-
     {% block javascripts %}
-    {#{{ encore_entry_script_tags('app') }}#}
-    {% endblock %}
+        <script src="{{ asset('js/script.js') }}"></script>
+        {% endblock %}
+        
 </head>
 
 <body>
     {% block body %}
+    <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="#news">Crud user</a>
+    <a href="#contact">crud movies</a>
+    
+    </div> 
+
     <form id="jq_search">
         <input type="search" placeholder="Recherche" />
         <button type="submit">Search</button>
     </form>
        {% if app.user %}
-        
               <a href="{{ path('app_logout') }}">se deconnecter</a>
             {% else %}
               <a href="{{ path('app_login') }}">se connecter</a>
