--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,13 +17,13 @@
 
 <body>
     {% block body %}
+      {% if is_granted('ROLE_ADMIN') %}
     <div class="topnav">
     <a class="active" href="#home">Home</a>
-    <a href="#news">Crud user</a>
+    <a href="{{ path('user_index') }}">Crud user</a>
     <a href="#contact">crud movies</a>
-    
     </div> 
-
+    {% endif %}
     <form id="jq_search">
         <input type="search" placeholder="Recherche" />
         <button type="submit">Search</button>
