--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
     <div class="topnav">
     <a class="active" href="#home">Home</a>
     <a href="{{ path('user_index') }}">Crud user</a>
-    <a href="#contact">crud movies</a>
+    <a href="{{ path('movie_index') }}">crud movies</a>
     </div> 
     {% endif %}
     <form id="jq_search">
