--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,29 +10,36 @@
     <link rel="stylesheet" href="{{ asset('css/Style.css') }}" type="text/css">
     {% endblock %}
     {% block javascripts %}
-        <script src="{{ asset('js/script.js') }}"></script>
-        {% endblock %}
-        
-</head>
+    <script src="{{ asset('js/script.js') }}"></script>
+    {% endblock %}
 
-<body>
-    {% block body %}
-      {% if is_granted('ROLE_ADMIN') %}
+</head>
+ {% if is_granted('ROLE_ADMIN') %}
     <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="{{ path('user_index') }}">Crud user</a>
-    <a href="{{ path('movie_index') }}">crud movies</a>
-    </div> 
+        <a class="active" href="#home">Home</a>
+        <a href="{{ path('user_index') }}">Crud user</a>
+        <a href="{{ path('movie_index') }}">crud movies</a>
+    </div>
+    {% endif %}
+    {% if app.user %}
+    <a href="{{ path('app_logout') }}">se deconnecter</a>
+    {% else %}
+    <a href="{{ path('app_login') }}">se connecter</a>
     {% endif %}
     <form id="jq_search">
-        <input type="search" placeholder="Recherche" />
-        <button type="submit">Search</button>
+        <input type="search" placeholder="Recherche" class="input" /><button type="submit">Search</button>
+        <ul id="autocomplete-results">
+        </ul>
+
     </form>
-       {% if app.user %}
-              <a href="{{ path('app_logout') }}">se deconnecter</a>
-            {% else %}
-              <a href="{{ path('app_login') }}">se connecter</a>
-            {% endif %} 
+    
+     
+        
+
+   
+<body>
+    {% block body %}
+   
     {% endblock %}
 </body>
 
