--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -36,7 +36,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('user_new') }}">Create new</a>
+    <a href="{{ path('movie_new') }}">Create new</a>
 
 
 
